--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,12 +23,12 @@ const data = await res.json();
 		<!-- Normalize CSS -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 
-		<title>Retreive and and display external API data with Astro</title>
+		<title>Joke API displayed using Astro</title>
 	</head>
 	<body>
 		
 		<header class="masthead">
-			<h1 class="site-title">Jokes</h1>
+			<h1 class="site-title">Daily Dose of Jokes for the Soul</h1>
 		</header>
 
 		<main id="content" class="main-area">
