--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -76,7 +76,7 @@ CSS Grid layout for wider screens, when browser supports grid:
 
 a:focus .caption,
 a:hover .caption {
-    background: hsla(246, 40%, 30%, 0.6);
+    background: hsl(207, 100%, 24%);
     opacity: 1;
 }
 }
